--- a/demo/index.html
+++ b/demo/index.html
@@ -13,10 +13,10 @@
       window.Polymer.dom = 'shadow';
       localStorage.clear()
     </script>
-    <link rel="import" href="../../polymer/polymer.html">
+    <!--link rel="import" href="../../polymer/polymer.html">
     <link rel="import" href="../../gunui-demo-app/gunui-demo-app.html">
     <link rel="import" href="../../gunui-demo-app/demo/demo-imports.html">
-    <link rel="import" href="../gun-ui-toggle3.html">
+    <link rel="import" href="../gun-ui-toggle3.html"-->
 
     <style is="custom-style" include="demo-shared-styles">
           :root{ }
